Be consistent in the html page with button name

--- a/resources/auth.html
+++ b/resources/auth.html
@@ -51,7 +51,7 @@
             <p>This page requires Javascript to run
                 <br>
                 <br>Alternatively, copy your access token from the URL
-                <br>and click "Paste token" button in Chatterino
+                <br>and click "Paste token from clipboard" button in Chatterino
             </p>
         </noscript>
         <p id="status">Loading...</p>
